# uMario_Jakowski

./: .gitignore  CMakeLists.txt  Makefile  README.md  uNext.sln
Debug/: uNext.ilk
cmake/: FindSDL2_Image.cmake  FindSDL2_Mixer.cmake  FindSDL2_ttf.cmake
uNext/: AboutMenu.cpp  AboutMenu.h  Beetle.cpp  Beetle.h  Block.cpp  Block.h  BlockDebris.cpp  BlockDebris.h  Bowser.cpp  Bowser.h  Bubble.cpp  Bubble.h  BulletBill.cpp  BulletBill.h  BulletBillSpawner.cpp  BulletBillSpawner.h  BulletBll.cpp  BulletBll.h  CFG.cpp  CFG.h  Cheep.cpp  Cheep.h  CheepSpawner.cpp  CheepSpawner.h  Coin.cpp  Coin.h  Console.cpp  Console.h  Core.cpp  Core.h  Event.cpp  Event.h  Fire.cpp  Fire.h  FireBall.cpp  FireBall.h  Flag.cpp  Flag.h  Flower.cpp  Flower.h  (+86 more)
uNext/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog  uNext.lastbuildstate  vc110.idb
uNext/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  uNext.lastbuildstate  uNext.res
